updated noteable content and images

--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -57,7 +57,7 @@
           UX Design | July-October 2021
         </p>
         <p class="intro-topic_time"> 
-            Noteable is a web app that improves dense reading experiences by 
+            Noteable is a web app that improves dense reading experiences by
             allowing users to easily take quick notes, as well as auto generate summaries given a long paragraph.
         </p>
       </div>
@@ -93,31 +93,13 @@
         <!--Ideation-->
         <section>
             <h4>Ideation</h4>
-            <p>
-                Speaking with our client, we ideated several main functionalities to help us visualize what will be required for Noteable.
-                The following is what we came up with : 
+            <p style="display: block; text-align: center;">
+                Speaking with our client, we ideated several main functionalities to help visualize what will be required for Noteable.
+                <br>What we discussed includes: onboarding, PDF viewer, note-taking annotation tools, and text summarizer.
             </p>
-            <div class="Row">
-                <div class="Column">
-                  Onboarding
-                </div>
-                <div class="Column">
-                  PDF Viewer
-                </div>
-            </div>
-            <div class="Row">
-                <div class="Column">
-                    Note-taking and Annotation
-                  </div>
-                <div class="Column">
-                    Text Summarizer
-                </div>
-            </div>
-            
-            <br><br>
-            <p>
-                The client had their own initial design of the product going into ideation but they wanted a complete redesign. 
-                The following is what they've shown as an initial concept:
+            <p style="display: block; text-align: center;">
+                The client already had their own initial design ideas on the product going into discussion. <br><br>
+                The following is their initial concept:
             </p>
             <div class="client_initial_design">
                     <img class="client_initial_design_img" src="./noteableimages/client_onboardingdesign.png" alt="Upload PDF Wireframe Client's Initial Design">
@@ -129,9 +111,8 @@
         <!-- Empathy Map -->
         <section class="empathy_map_section">
             <h4>Empathy Map</h4>
-            <p>
-                I made an empathy map to better understand how our users may say, feeling, think, and want when faced with a large reading of text. 
-                I imagine putting myself into that situation and how I may also feel.
+            <p style="display: block; text-align: center; margin-bottom: 2rem;">
+                I made an empathy map to understand what users may say, feeling, think, and want when they are faced with large reading.
             </p>
             <img class="empathy_map" src="./noteableimages/Noteable - Empathy Map.jpg" alt="An empathy map for Noteable">
         </section>
@@ -149,7 +130,7 @@
         <section class="info_architecture">
             <h4>Information Architecture</h4>
             <p>
-                To visualize how user flows may be through Noteable, I created an information architecture to map out where each screen would be located within the full user experience.
+                I created an information architecture to visualize Noteable's basic user flows.
             </p>
             <img class="info_arch" src="./noteableimages/Noteable - Information Architecture.jpg" alt="An information architecture for Noteable">
         </section>
@@ -160,110 +141,32 @@
         <h4>
           Low-fidelity Wireframes
         </h4>
-        <p>
-          Based on the information architecture, I then made a few low-fidelity wireframes to see how design elements can be placed within each main screen of Noteable.
-        </p>
-        <div class="Row_wf">
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Lowfi wireframes/1.png" src="Noteable's lowfi wireframes">
-          </div>
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Lowfi wireframes/2.png" src="Noteable's lowfi wireframes">
-          </div>
-        </div>
-        <div class="Row">
-            <div class="Column_wf">
-              <img class="wf_img" src="./noteableimages/Lowfi wireframes/3.png" src="Noteable's lowfi wireframes">
-            </div>
-            <div class="Column_wf">
-              <img class="wf_img" src="./noteableimages/Lowfi wireframes/4.png" src="Noteable's lowfi wireframes">
-            </div>
-        </div>
-        <div class="Row">
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Lowfi wireframes/5.png" src="Noteable's lowfi wireframes">
-          </div>
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Lowfi wireframes/6.png" src="Noteable's lowfi wireframes">
-          </div>
-        </div>  
-      </section>
-
-      <section class="highfi">
-        <h4>
-          High-fidelity Wireframes
-        </h4>
-        <p>
-          After the low-fidelity wireframes, I had several iteration sessions to create the final high-fidelity wireframes.
-        </p>
-        <div class="Row_wf">
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/1. Landing page.png" src="Noteable's highfi wireframes">
-          </div>
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/2. Sign Up.png" src="Noteable's highfi wireframes">
-          </div>
-        </div>
-        <div class="Row">
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/3. Log In.png" src="Noteable's highfi wireframes">
-          </div>
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/4. Verify email.png" src="Noteable's highfi wireframes">
-          </div>
-        </div>
-        <div class="Row_wf">
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/5. Home _ Upload (SIGNED-IN).png" src="Noteable's highfi wireframes">
-          </div>
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/6. My Notes.png" src="Noteable's highfi wireframes">
-          </div>
-        </div>
-        <div class="Row_wf">
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/7. Summarize (BEFORE).png" src="Noteable's highfi wireframes">
-          </div>
-          <div class="Column_wf">
-            <img class="wf_img" src="./noteableimages/Highfi wireframes/8. Summarize (AFTER).png" src="Noteable's highfi wireframes">
-          </div>
-        </div>
+        <img class="wf_img" src="./noteableimages/Lowfi wireframes/Lowfi.png" src="Noteable's lowfi wireframes">
       </section>
     </section>
 
     <section class="final_section">
       <section class="key_features">
         <h4>
-          Final Solution & Key Features
-        </h4><br><br>
+          High-fidelity Final Solution
+        </h4><br>
 
-        <p style="text-align: center;">Sign-up | Users can create an account</p> 
-        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/1.Noteable-SignUpGIF.gif" alt="Noteable Final Key Features GIF">
-
-        <p style="text-align: center; margin-top: 2rem;">Log-in and File Selection | Users can access their account and past files</p> 
-        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/2.Noteable-LoginGIF.gif" alt="Noteable Final Key Features GIF">
-
-        <p style="text-align: center; margin-top: 2rem;"> Annotation | Users can take notes and annotate PDF files</p> 
+        <p style="text-align: center; margin-bottom: 1rem"> Annotation | Users can take notes and annotate PDF files</p>
         <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/3.Noteable-NotesGIF.gif" alt="Noteable Final Key Features GIF">
 
-        <p style="text-align: center; margin-top: 2rem;"> Summarization | Users can generate AI summaries of PDF pages, and edit summaries as needed</p>
+        <p style="text-align: center; margin-top: 2rem; margin-bottom: 1rem"> Summarization | Users can generate AI summaries of PDF pages, and edit summaries as needed</p>
         <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/4.Noteable-SummarizeGIF.gif" alt="Noteable Final Key Features GIF">
-
-        <p style="text-align: center; margin-top: 2rem;"> Multi-file Selection | Users can access past files and select new texts to work with</p>
-        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/5.Noteable-NewPDFGIF.gif" alt="Noteable Final Key Features GIF">
       </section>
 
-      <section class="conclusion">
+      <section class="conclusion"  style="padding-left: 4rem; padding-right: 4rem;">
         <h4>
-          Lessons Learned
+          Learnings and Growth
         </h4>
         <br>
         <p>
-          This project was the first time I had an opportunity to go through a full design process with a client specifying their needs throughout the experience. 
-          I learned that getting a client's input on the design as well as adjusting our product to better reflect their needs is critical to a solution's success.
-          <br><br>
-          In addition, a client may understand what they want but not necessarily how to move towards that goal, so it was very rewarding to work 
-          with them to find out how a solution can meet their needs.
+          Throughout this process I learned that getting a client's input throughout the design process and repeated iteration on our product is critical to a solution's success.
+          Throughout our design cycle, we continuously spoke with the client to see what they thought of the designs, and I saw that a client may understand what they want 
+          but not necessarily how to move towards that design goal. Therefore it was very rewarding as a designer to work with them continuously to find how diverse solutions can meet their needs.
         </p>
         <br>
         <br>
