updated 2nd redesign images

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -193,10 +193,8 @@
         shopping, meal planning, and budgeting. <br>
         Gaining feedback on my designs and studies, I made key changes to my previous work as shown below.
       </p>
-      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2ndHighfi Shopping.png" alt="Groovy Groceries Second Iteration Wireframes">
-      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Items.png" alt="Groovy Groceries Second Iteration Wireframes">
-      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Budget.png" alt="Groovy Groceries Second Iteration Wireframes">
-      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Mealplan.png" alt="Groovy Groceries Second Iteration Wireframes">
+      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi First.png" alt="Groovy Groceries Second Iteration Wireframes">
+      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Second.png" alt="Groovy Groceries Second Iteration Wireframes">
     <section>
 
     <!-- Final Solution -->
