updated research page illustration

--- a/assets/projectPages/accessibilityAssets/accessibility.html
+++ b/assets/projectPages/accessibilityAssets/accessibility.html
@@ -12,13 +12,13 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./accessibilityicons/"
+      href="../../icons/tabIcon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./accessibilityicons/"
+      href="../../icons/tabIcon.png"
     />
 
     <title> Ann C. Tseng | Accessibility and AI </title>
@@ -70,7 +70,7 @@
             </a>
         </h4>
 
-        <img class="research_fill_image" src="./accessibilityimages/fill_img.png" alt="Image for Research Study">
+        <img class="research_fill_image" src="./accessibilityimages/fill_img.svg" alt="Image for Research Study">
       </div>
 
       <div class="intro_right">
@@ -91,6 +91,7 @@
         </p>
       </div>
     </section>
+    <br><br>
 
  
     <!-- CASE STUDY END! -->
@@ -102,17 +103,6 @@
       class="socicon up-arrow"
       alt="scroll-up"
     /></i>
-
-    <!-- Footer section -->
-    <footer>
-        <p class="copy">&copy; Copyright 2022</p>
-        <p class="copy">
-          Made with &#x2661; by
-          <a href="https://www.linkedin.com/in/annct/" target="_blank"
-            >Ann C. Tseng</a
-          >
-        </p>
-  </footer>
 
     <!-- Website scripts -->
     <script src="./accessibilityjs/app.js"></script>
