--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -12,13 +12,13 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./noteableicons/"
+      href="../../icons/tabIcon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./noteableicons/tabIcon.png"
+      href="../../icons/tabIcon.png"
     />
 
     <title> Ann C. Tseng | Noteable </title>
