updated groovy's future improvements section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -265,7 +265,7 @@
       <p style="display: block; text-align: center;">
         In the future I want to achieve a majority of our respondents to be university students, <br>
         and to incorporate more user interviews within our design cycle. From the feedback, I could <br>
-        then iterate further on the designs for Groovy Groceries.
+        then further iterate on the designs.
       </p>
       <br>
       <br>
