--- a/assets/projectPages/accessibilityAssets/accessibility.html
+++ b/assets/projectPages/accessibilityAssets/accessibility.html
@@ -76,7 +76,7 @@
       <div class="intro_right">
         <h4>My Role: UX Designer</h4>
         <p>
-            Recruitment, Survey Creation and Distribution, Semi-structured Interviews, Data Analysis and Synthesis, Paper Write-up
+            Recruitment, Surveys, Semi-structured Interviews, Data Analysis and Synthesis, Paper Write-up
         </p>
 
         <h4>Methods:</h4>
