testing responsiveness for strips

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -51,8 +51,37 @@
 
     <!-- CASE STUDY START -->
     <section class="casestudy-global">
+      <div class="intro-strip"> 
+        <div>
+          <h2>Groovy Groceries</h2>
+          <p>UX Design & Research | Aug-Oct 2021, Apr-Aug 2022 (finalize)</p>
+          <p>
+            Groovy Groceries is a university grocery app that helps college students find ways to use their school dining dollars, budget their spendings, plan out meals, and grocery shop with ease.
+          </p>
+        </div>
+        <div>
+          <h4>My Role: UX Designer</h4>
+          <p>User research, affinity diagramming, empathy map, user persona, user flow, info architecture, low-high fidelity wireframing, and prototyping</p>
+          <h4>Tools: </h4>
+          <p>Figma & Miro</p>
+          <h4>Team:</h4>
+          <p>Emily Song (UX Designer)</p>
+        </div>
+      </div>
 
-    </div>
+      <div class="strip">
+        <h4>Title 1</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="strip"> 
+        <h4>Title 2</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </section>
     <!-- CASE STUDY END! -->
 
     <!-- Scroll to top -->
