--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -49,130 +49,8 @@
       />
     </section>
 
-    <!-- Intro Section -->
-    <section class="intro">
-      <div class="intro_left">
-        <h2 class="intro-title"> Noteable </h2>
-        <p class="intro-topic_time"> 
-          UX Design | July-October 2021
-        </p>
-        <p class="intro-topic_time"> 
-            Noteable is a web app that improves dense reading experiences by
-            allowing users to easily take quick notes, as well as auto generate summaries given a long paragraph.
-        </p>
-      </div>
+    <!-- CASE STUDY START! -->
 
-      <div class="intro_right">
-        <h4>My Role: UX Designer</h4>
-        <p>
-            Ideation sessions with client, information architecture, low-fi and high-fi wireframe, prototype design​
-        </p>
-
-        <h4>Tools:</h4>
-        <p>
-          Figma and Miro
-        </p>
-
-        <h4>Team:</h4>
-        <p>
-            Emily Song (UX Designer) and Shikha Kandpal (Project Manager)
-        </p>
-      </div>
-    </section>
-
-    <section class="design_question">
-      <hr>
-      <h4>Design Question</h4>
-      <p>
-        How might we improve people's reading experiences of dense texts?
-      </p>
-      <hr>
-    </section>
-
-    <section class="ideation_empathymap_painpoints_informationarchitecture">
-        <!--Ideation-->
-        <section>
-            <h4>Ideation</h4>
-            <p style="display: block; text-align: center;">
-                Speaking with our client, we ideated several main functionalities to help visualize what will be required for Noteable.
-                <br>What we discussed includes: onboarding, PDF viewer, note-taking annotation tools, and text summarizer.
-            </p>
-            <p style="display: block; text-align: center;">
-                The client already had their own initial design ideas on the product going into discussion. <br><br>
-                The following is their initial concept:
-            </p>
-            <div class="client_initial_design">
-                    <img class="client_initial_design_img" src="./noteableimages/client_onboardingdesign.png" alt="Upload PDF Wireframe Client's Initial Design">
-                    <img class="client_initial_design_img" src="./noteableimages/client_notetakingdesign.png" alt="Note-taking Annotation Wireframe Client's Initial Design">
-                    <img class=client_initial_design_img" src="./noteableimages/client_summarizedesign.png" alt="Summarizer Wireframe Client's Initial Design">
-            </div>
-        </section>
-
-        <!-- Empathy Map -->
-        <section class="empathy_map_section">
-            <h4>Empathy Map</h4>
-            <p style="display: block; text-align: center; margin-bottom: 2rem;">
-                I made an empathy map to understand what users may say, feeling, think, and want when they are faced with large reading.
-            </p>
-            <img class="empathy_map" src="./noteableimages/Noteable - Empathy Map.jpg" alt="An empathy map for Noteable">
-        </section>
-
-        <!-- Pain Points -->
-        <section class="pain_points_section">
-          <h4>Pain Points</h4>
-          <p>
-              Using the empathy map, I then identified a few pain points that users may experience when trying to read dense texts.
-          </p>
-          <img class="pain_points" src="./noteableimages/Noteable - Pain Points.jpg" alt="A few pain points for Noteable">
-        </section>
-
-        <!-- Information Architecture -->
-        <section class="info_architecture">
-            <h4>Information Architecture</h4>
-            <p>
-                I created an information architecture to visualize Noteable's basic user flows.
-            </p>
-            <img class="info_arch" src="./noteableimages/Noteable - Information Architecture.jpg" alt="An information architecture for Noteable">
-        </section>
-    </section>
-
-    <section class="wireframes_section">
-      <section class="lowfi">
-        <h4>
-          Low-fidelity Wireframes
-        </h4>
-        <img class="wf_img" src="./noteableimages/Lowfi wireframes/Lowfi.png" src="Noteable's lowfi wireframes">
-      </section>
-    </section>
-
-    <section class="final_section">
-      <section class="key_features">
-        <h4>
-          High-fidelity Final Solution
-        </h4><br>
-
-        <p style="text-align: center; margin-bottom: 1rem"> Annotation | Users can take notes and annotate PDF files</p>
-        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/3.Noteable-NotesGIF.gif" alt="Noteable Final Key Features GIF">
-
-        <p style="text-align: center; margin-top: 2rem; margin-bottom: 1rem"> Summarization | Users can generate AI summaries of PDF pages, and edit summaries as needed</p>
-        <img class="final_features_GIF" src="./noteableimages/KeyFeaturesGif/FinalGif/4.Noteable-SummarizeGIF.gif" alt="Noteable Final Key Features GIF">
-      </section>
-
-      <section class="conclusion"  style="padding-left: 4rem; padding-right: 4rem;">
-        <h4>
-          Learnings and Growth
-        </h4>
-        <br>
-        <p>
-          Throughout this process I learned that getting a client's input throughout the design process and repeated iteration on our product is critical to a solution's success.
-          Throughout our design cycle, we continuously spoke with the client to see what they thought of the designs, and I saw that a client may understand what they want 
-          but not necessarily how to move towards that design goal. Therefore it was very rewarding as a designer to work with them continuously to find how diverse solutions can meet their needs.
-        </p>
-        <br>
-        <br>
-        <br>
-      </section>
-    </section>
     <!-- CASE STUDY END! -->
 
     <!-- Scroll to top -->
