--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -49,7 +49,7 @@
       />
     </section>
 
-    <!-- CASE STUDY START -->
+    <!-- CONTENT START -->
     <section class="casestudy-global">
       <div class="intro-strip"> 
         <div>
@@ -70,16 +70,133 @@
       </div>
 
       <div class="strip">
-        <h4>Title 1</h4>
+        <hr style="margin-bottom: 5rem;">
+        <h4>Design Question:</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          How might we help students stay on top of their grocery needs?
         </p>
+        <hr style="margin-top: 5rem;">
       </div>
-      <div class="strip"> 
-        <h4>Title 2</h4>
+
+      <div class="strip">
+        <h4>Research Findings</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          I conducted user surveys to find out about preferences and barriers that can impact a user's grocery shopping experience.
+          Additionally I asked users how they may go about planning meals or budgeting.
+          After gathering the responses, I made an affinity diagram to help me consolidate the information. <br><br>
+          From here, I grouped common patterns into 6 main findings:
         </p>
+        <img src="./groovyimages/Research Findings.png" alt="Research Findings">
+      </div>
+
+      <div class="strip">
+        <h4>Empathy Map</h4>
+        <p> I consolidated these findings into an empathy map in order to consolidate our user's needs, wants, actions, and thoughts.</p>
+        <img src="./groovyimages/Empathy Map.png" alt="Empathy Map">
+      </div>
+
+      <div class="strip">
+        <h4>User Persona</h4>
+        <p>I then specified our user's wishes, needs, and struggles.</p><br>
+        <img src="./groovyimages/User Persona.png" alt="User Persona">
+      </div>
+
+      <div class="strip">
+        <h4>Information Architecture</h4>
+        <p>Creating an information architecture helped me to map out user navigation and understand experience connections within our system.</p><br>
+        <img src="./groovyimages/Information Architecture.png" alt="Information Architecture">
+      </div>
+
+      <div class="strip">
+        <h4>Low Fidelity Wireframes</h4><br>
+        <img src="./groovyimages/LowfiFlow.png" alt="Low Fidelity Wireframes">
+      </div>
+
+      <div class="strip">
+        <h4>Initial Rounds of Iterations</h4>
+        <p>
+          My initial design for mid to high-fidelity wireframes lacked visual cohesion and sufficient user feedback.
+          Therefore I took some time to study more interface design, and gain valuable critique from UX mentors and users on my work.</p> <br>
+        <img src="./groovyimages/initialhighfi/InitialHighFi.png" alt="First Round of Interations Wireframes">
+      </div>
+
+      <div class="strip">
+        <h4>Growth & More Iterations!</h4>
+        <p>
+          I came back to iterate oncemore on the three main experiences for Groovy Groceries: shopping, meal planning, and budgeting.
+          Gaining much feedback on my designs, I made key changes to my previous work.
+        </p> <br>
+        <img src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi First.png" alt="More Rounds of Interations Wireframes">
+        <img src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Second.png" alt="More Rounds of Interations Wireframes">
+      </div>
+
+      <div class="final-solution-section">
+        <div class="solution-strip">
+          <div>
+            <img src="./groovyimages/2nd Redesign highfi/Shopping.gif" alt="Final Solution Prototype Display">
+          </div>
+          <div>
+            <h4>Shopping - Final Solution</h4>
+            <p>
+              1. Students can browse through university-affiliated store for items
+            </p>
+            <p>
+              2. Discounts and purchases allow use of student card (or other payment cards)
+            </p>
+            <p>
+              3. Delivery and in-store pickup availability for student convenience
+            </p>
+          </div> 
+        </div>
+        <div class="solution-strip">
+          <div>
+            <img src="./groovyimages/2nd Redesign highfi/Budget.gif" alt="Final Solution Prototype Display">
+          </div>
+          <div>
+            <h4>Budgeting - Final Solution</h4>
+            <p>
+              1. Students can quickly view weekly spending compared to weekly limit<br>
+            </p>
+            <p>
+              2. Weekly Activity Bar Graph display spending categories<br>
+            </p>
+            <p>
+              3. Detailed Transactions document monthly spending trend & recent purchases
+            </p>
+          </div>
+        </div>
+        <div class="solution-strip">
+          <div>
+            <img src="./groovyimages/2nd Redesign highfi/Mealplan.gif" alt="Final Solution Prototype Display">
+          </div>
+          <div>
+            <h4>Meal Plan - Final Solution</h4>
+            <p>
+              1. Fast selection of a specific day of chosen week <br>
+            <p>
+              2. Meal plan edits and additions made for the day              
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="strip">
+        <h4>What I Learned</h4>
+        <p>
+          Grocery purchases, planning, and budgeting can vary diversely between our users.
+          I aimed to create a solution to allow our users the flexibility and efficiency of addressing their need,
+          whether that be all experiences this product has to offer or portions of it.
+          Through iterating on specific flows of our solution multiple times, this greatly allowed me to
+          further think through our users' experiences within that particular aspect of our overall solution.
+        </p> <br><br>
+
+        <h4>Future Improvements</h4>
+        <p>
+          In the future I want to achieve a majority of our respondents to be university students,
+          and to incorporate more user interviews within our design cycle. From the feedback, I could
+          then further iterate on the designs.
+        </p>
+        <br>
       </div>
     </section>
     <!-- CASE STUDY END! -->
