updated noteable's css and html organization

--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -50,7 +50,87 @@
     </section>
 
     <!-- CASE STUDY START! -->
+    <div class="casestudy-global">
+      <div class="intro-strip">
+        <div>
+          <h2>Noteable</h2>
+          <p>UX Design | July-October 2021</p>
+          <p>Noteable is a web app that improves dense reading experiences by allowing users to easily take quick notes on PDF readings, as well as auto generate summaries given paragraphs of text.</p>
+        </div>
+        <div>
+          <h4>My Role: UX Designer</h4>
+          <p>Ideation sessions with client, information architecture, low-fi and high-fi wireframe, prototype design</p>
+          <h4>Tools:</h4>
+          <p>Figma and Miro</p>
+          <h4>Team:</h4>
+          <p>Emily Song (UX Designer) and Shikha Kandpal (Client)</p>
+        </div>
+      </div>
 
+      <div class="strip">
+        <hr style="margin-bottom: 5rem;">
+        <h4>Design Question:</h4>
+        <p>
+          How might we improve people's reading experiences of dense texts?
+        </p>
+        <hr style="margin-top: 5rem;">
+      </div>
+      <div class="strip">
+        <h4>Ideation</h4>
+        <p>
+          Speaking with our client, we ideated several main functionalities to help visualize what will be required for Noteable.
+          What we discussed includes: onboarding, PDF viewer, note-taking annotation tools, and text summarizer.
+          The client already had their own initial design ideas on the product going into discussion.
+          <br><br>
+          The following was their initial concept:
+        </p>
+        <div class="client-initial-designs">
+          <img src="./noteableimages/client_onboardingdesign.png" alt="Client initial design">
+          <img src="./noteableimages/client_notetakingdesign.png" alt="Client initial design">
+          <img src="./noteableimages/client_summarizedesign.png" alt="Client initial design">
+        </div>
+      </div>
+
+      <div class="strip">
+        <h4>Empathy Map</h4>
+        <p>I made an empathy map to understand what users may say, feeling, think, and want when they are faced with large reading.</p>
+        <img src="./noteableimages/Noteable - Empathy Map.jpg" alt="Empathy Map">
+      </div>
+
+      <div class="strip">
+        <h4>Pain Points</h4>
+        <p>Using the empathy map, I then identified a few pain points that users may experience when trying to read dense texts.</p>
+        <img src="./noteableimages/Noteable - Pain Points.jpg" alt="Pain Points">
+      </div>
+
+      <div class="strip">
+        <h4>Information Architecture</h4>
+        <p>
+          I created an information architecture to visualize Noteable's basic user flows.
+        </p>
+        <img src="./noteableimages/Noteable - Information Architecture.jpg" alt="Information Architecture">
+      </div>
+
+      <div class="strip">
+        <h4>Low-fidelity Wireframes</h4>
+        <img src="./noteableimages/Lowfi wireframes/Lowfi.png" alt="Lowfi Wireframes">
+      </div>
+
+      <div class="strip">
+        <h4>Final Features</h4><br>
+        <p>Annotation | Users can take notes and annotate PDF files</p>
+        <img src="./noteableimages/KeyFeaturesGif/FinalGif/3.Noteable-NotesGIF.gif" alt="Highfi Solution"><br><br>
+        <p>Summarization | Users can generate AI summaries, and edit them as needed</p>
+        <img src="./noteableimages/KeyFeaturesGif/FinalGif/4.Noteable-SummarizeGIF.gif" alt="Highfi Solution">
+      </div>
+
+      <div class="strip">
+        <h4>Learnings</h4>
+        <p>
+          Throughout this process I learned that getting a client's input throughout the design process and repeated iteration on our product is critical to solution building. Throughout our design cycle, we continuously spoke with the client to see what they thought of the designs, and I saw that a client may understand what they want but not necessarily how to move towards that their vision. Therefore it was very rewarding as a designer to work continuously with them to find how differing solutions can meet their needs.
+        </p>
+      </div>
+    </div>
     <!-- CASE STUDY END! -->
 
     <!-- Scroll to top -->
