removing testing text

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -53,7 +53,7 @@
     <section class="casestudy-global">
       <div class="intro-strip"> 
         <div>
-          <h2>Groovy Groceries Testing...</h2>
+          <h2>Groovy Groceries</h2>
           <p>UX Design & Research | Aug-Oct 2021, Apr-Aug 2022 (finalize)</p>
           <p>
             Groovy Groceries is a university grocery app that helps college students find ways to use their school dining dollars, budget their spendings, plan out meals, and grocery shop with ease.
