updating home page layout

--- a/index.html
+++ b/index.html
@@ -38,71 +38,10 @@
         </button>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero" id="about">
-        <img
-          src="assets/images/anntseng.svg"
-          alt="ann-c-tseng"
-          loading="lazy"
-          class="hero-img"
-        />
-
-          <div class="bio">
-            <h2 class="bio-title">Hi there, this is Ann! &#128522;</h2>
-            <p class="bio-text">
-              Currently an undergraduate student studying UX Design and Computer Science at Western Washington University!
-              I am a curious learner who seeks to use design and development as a bridge towards creating compelling user experiences!
-            </p>
-          </div>
-    </section>
-
-    <!-- Projects section -->
-    <section class="projects" id="work">
-        <h2 class="projects-title">Work</h2>
-        <div class="projects-container">
-          <div class="project-container project-card">
-            <img
-              src="assets/images/Groovygroceries.png"
-              alt="groovy"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Groovy Groceries</h3>
-            <p class="project-details">
-              User Experience Design
-            </p>
-            <a href="./assets/projectPages/groovyAssets/groovy.html" class="project-link">View</a>
-          </div>
-
-          <div class="project-container project-card">
-            <img
-              src="assets/images/Noteable.png"
-              alt="noteable"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Noteable</h3>
-            <p class="project-details">
-                User Experience Design  
-            </p>
-            <a href="./assets/projectPages/noteableAssets/noteable.html" class="project-link">View</a>
-          </div>
-
-          <div class="project-container project-card">
-            <img
-              src="assets/images/Accessibilityresearch.png"
-              alt="accessibility"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Integrate Accessibility</h3>
-            <p class="project-details">
-              User Experience Research
-            </p>
-            <a href="./assets/projectPages/accessibilityAssets/accessibility.html" class="project-link">View</a>
-          </div>
-        </div>
-    </section>
+    <!-- Main Section -->
+    
+    <!-- End of Main Section -->
+    
 
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
