working on div layout for home page

--- a/index.html
+++ b/index.html
@@ -45,15 +45,24 @@
         </h1>
       </div>
 
-      <div class="cards-div">
-        <div>
+      <div class="cards-row">
+        <div class="cards-column">
           <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
-          <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
+          <p> Card 1 </p>
         </div>
-      
-        <div>
+        <div class="cards-column">
           <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
+          <p> Card 2 </p>
+        </div>
+      </div>
+      <div class="cards-row">
+        <div class="cards-column">
           <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
+          <p> Card 3 </p>
+        </div>
+        <div class="cards-column">
+          <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
+          <p> Card 4 </p>
         </div>
       </div>
 
