--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <nav>
         <h1> Ann C. Tseng </h1>
         <ul class="navigation">
-            <li><a href="#work" class="nav-link">Work</a></li>
+            <li><a href="#about" class="nav-link"> About </a></li>
+            <li><a href="#work-div" class="nav-link">Work</a></li>
             <li><a href="https://drive.google.com/file/d/1WN7j-C2qAl1S9T10XnTLLyEKrbmHjO0c/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
@@ -40,57 +41,61 @@
     <!-- Main Section -->
     <section class="main-section-global">
       <div class="header-div">
-        <h1 class="header">
-          ✴ A maker passionate for purposeful UX design + development ✴︎ 
-        </h1>
+          
+        <img id="about" class="header-img" src="./assets/images/anntseng.svg" alt="Home Page Introductory Image">
+
+        <p>
+          I am currently an undergraduate student studying UX Design + Computer Science at Western Washington University! I am a curious learner who seeks to use design and development as a bridge towards creating compelling user experiences!
+        </p>
+
+        <p>
+          When I am not working on design or code projects... You can find me doodling, watching movies/musicals, hanging out with friends, or finding delicious food around Seattle.
+        </p>
+
+        <p>
+          I am always down to working with lovely people on creative projects, and I am super excited that you decided to stop by.
+        </p>
+
+        <p>
+          Please enjoy your stay &#129392
+        </p>
       </div>
 
-      <div class="cards-row">
-        <div class="cards-column">
-          <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
-          <p> Card 1 </p>
+      <div id="work-div">
+        <div class="cards-container">
+          <div class="cards-column">
+            <a>
+              <img src="./assets/images/Groovygroceries.png" alt="Groovy Groceries Card">
+            </a>
+            <h4> Groovy Groceries </h4>
+            <p>User Experience Design | Mobile</p>
+          </div>
+          <div class="cards-column">
+            <a>
+              <img src="./assets/images/Noteable.png" alt="Noteable Card">
+            </a>
+            <h4> Noteable </h4>
+            <p>User Experience Design | Web</p>
+          </div>
         </div>
-        <div class="cards-column">
-          <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
-          <p> Card 2 </p>
+  
+        <div class="cards-container">
+          <div class="cards-column">
+            <a>
+              <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
+            </a>
+            <h4> Accessibility Education in AI Courses </h4>
+            <p>User Research</p>
+          </div>
+          <div class="cards-column">
+            <a>
+              <img src="./assets/images/Filler.png" alt="Misty Grove">
+            </a>
+            <h4> Misty Grove</h4>
+            <p>A JavaScript Role-Playing Game</p>
+          </div>
         </div>
       </div>
-      <div class="cards-row">
-        <div class="cards-column">
-          <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
-          <p> Card 3 </p>
-        </div>
-        <div class="cards-column">
-          <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
-          <p> Card 4 </p>
-        </div>
-      </div>
-
-
-      <!-- <div class="cards-div">
-        <div class="card">
-          <a href="./assets/projectPages/accessibilityAssets/accessibility.html"> 
-            <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
-            <p> Accessibility and AI </p>
-          </a>
-        </div>
-        <div class="card">
-          <img src="./assets/images/Noteable.png" alt="Noteable Card">
-          <p> Misty Grove </p>
-        </div>
-      </div> -->
-
-    </section>
-    <!-- End of Main Section -->
-    
-
-    <!-- Scroll to top -->
-    <i class="scroll-up" id="scroll-up"
-    ><img
-      src="assets/icons/uparrow.png"
-      class="socicon up-arrow"
-      alt="scroll-up"
-    /></i>
 
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
