added linking to projects

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
       <div id="work-div">
         <div class="cards-container">
           <div class="cards-column">
-            <a>
+            <a href="./assets/projectPages/groovyAssets/groovy.html">
               <img src="./assets/images/Groovygroceries.png" alt="Groovy Groceries Card">
             </a>
             <h4> Groovy Groceries </h4>
             <p>User Experience Design | Mobile</p>
           </div>
           <div class="cards-column">
-            <a>
+            <a href="./assets/projectPages/noteableAssets/noteable.html">
               <img src="./assets/images/Noteable.png" alt="Noteable Card">
             </a>
             <h4> Noteable </h4>
@@ -81,18 +81,18 @@
   
         <div class="cards-container">
           <div class="cards-column">
-            <a>
+            <a href="./assets/projectPages/accessibilityAssets/accessibility.html">
               <img src="./assets/images/Accessibilityresearch.png" alt="Accessibility Research Card">
             </a>
             <h4> Accessibility Education in AI Courses </h4>
             <p>User Research</p>
           </div>
           <div class="cards-column">
-            <a>
+            <!-- <a href="./assets/projectPages/wip"> -->
               <img src="./assets/images/Filler.png" alt="Misty Grove">
-            </a>
+            <!-- </a> -->
             <h4> Misty Grove</h4>
-            <p>A JavaScript Role-Playing Game</p>
+            <p>Work in Progress: A JavaScript Role-Playing Game</p>
           </div>
         </div>
       </div>
