added home banner avatar and hobbies icon

--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
 
     <!-- Main Section -->
     <section class="main-section-global">
-      <div class="header-div">
-          
-        <img id="about" class="header-img" src="./assets/images/anntseng.svg" alt="Home Page Introductory Image">
+      <div class="full-header-div">
+        
+        <div class="header-img-div">
+          <img id="header-avatar" src="./assets/images/homeBannerImgs/Avatar.png" alt="home page banner avatar - Ann with braids"></imgg>
+          <img id="header-code" src="./assets/images/homeBannerImgs/code.png" alt="home page banner avatar - icon of code screen"></imgg>
+          <img id="header-food" src="./assets/images/homeBannerImgs/food.png" alt="home page banner avatar - icon of pink cake"></imgg>
+          <img id="header-design" src="./assets/images/homeBannerImgs/design.png" alt="home page banner avatar - icon of paintbrush and pencil design"></imgg>
+          <img id="header-film" src="./assets/images/homeBannerImgs/film.png" alt="home page banner avatar - icon of a purple film roll"></imgg>
+        </div>
 
         <p>
           I am currently an undergraduate student studying UX Design + Computer Science at Western Washington University! I am a curious learner who seeks to use design and development as a bridge towards creating compelling user experiences!
@@ -61,7 +67,10 @@
         </p>
       </div>
 
-      <div id="work-div">
+      <a id="work-div" style="display: block; position: relative; top: -75px; visibility: hidden;"></a>
+
+      <div class="workcards-div">
+        <h1> Work </h1>
         <div class="cards-container">
           <div class="cards-column">
             <a href="./assets/projectPages/groovyAssets/groovy.html">
