--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -30,7 +30,7 @@
         <h1> Ann C. Tseng </h1>
         <ul class="navigation">
             <li><a href="../../../index.html" class="nav-link">About</a></li>
-            <li><a href="../../../index.html#work" class="nav-link">Work</a></li>
+            <li><a href="../../../index.html#work-div" class="nav-link">Work</a></li>
             <li><a href="https://drive.google.com/file/d/1WN7j-C2qAl1S9T10XnTLLyEKrbmHjO0c/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
