--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -119,15 +119,15 @@
       <div class="strip">
         <h4>Final Features</h4><br>
         <p>Annotation | Users can take notes and annotate PDF files</p>
-        <img src="./noteableimages/KeyFeaturesGif/FinalGif/3.Noteable-NotesGIF.gif" alt="Highfi Solution"><br><br>
+        <img src="./noteableimages/KeyFeaturesGif/FinalGif/note taking.gif" alt="Highfi Solution"><br><br>
         <p>Summarization | Users can generate AI summaries, and edit them as needed</p>
-        <img src="./noteableimages/KeyFeaturesGif/FinalGif/4.Noteable-SummarizeGIF.gif" alt="Highfi Solution">
+        <img src="./noteableimages/KeyFeaturesGif/FinalGif/summary.gif" alt="Highfi Solution">
       </div>
 
       <div class="strip">
         <h4>Learnings</h4>
         <p>
-          Throughout this process I learned that getting a client's input throughout the design process and repeated iteration on our product is critical to solution building. Throughout our design cycle, we continuously spoke with the client to see what they thought of the designs, and I saw that a client may understand what they want but not necessarily how to move towards that their vision. Therefore it was very rewarding as a designer to work continuously with them to find how differing solutions can meet their needs.
+          From this experience I learned that getting a client's input throughout the design process & repeated iteration on our product is critical to dynamic solution building. Within our design cycles, we continuously spoke with the client to see what they thought of the designs as we progress. I also learned that a client may understand what they want but not necessarily how to move towards their vision. Therefore it was very rewarding as a designer to work continuously with these users to find how diverse solutions can meet their needs.
         </p>
       </div>
     </div>
