--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
           <div class = "header-img-div header-icons-movement">
             <img id="header-code" src="./assets/images/homeBannerImgs/code.png" alt="home page banner  - icon of code screen"></img>
             <img id="header-food" src="./assets/images/homeBannerImgs/food.png" alt="home page banner  - icon of pink cake"></img>
-            <!-- <img id="header-avatar" src="./assets/images/homeBannerImgs/Avatar.png" alt="home page banner - character"></img> -->
+          </div>
+          <div class="header-img-div">
+            <img id="header-avatar" src="./assets/images/homeBannerImgs/Avatar.png" alt="home page banner - character"></img>
+          </div>
+          <div class = "header-img-div header-icons-movement">
             <img id="header-design" src="./assets/images/homeBannerImgs/design.png" alt="home page banner - icon of paintbrush and pencil design"></imgg>
             <img id="header-film" src="./assets/images/homeBannerImgs/film.png" alt="home page banner - icon of a purple film roll"></img>
           </div>
