added index.html update and misty grove image

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             <p>User Research</p>
           </div>
           <div class="cards-column">
-            <!-- <a href="./assets/projectPages/wip"> -->
-              <img src="./assets/images/Filler.png" alt="Misty Grove">
-            <!-- </a> -->
+            <a href="./assets/projectPages/mistygroveAssets/mistygrove.html">
+              <img src="./assets/images/MistyGrove.png" alt="Misty Grove">
+            </a>
             <h4> Misty Grove</h4>
-            <p>Work in Progress: A JavaScript Role-Playing Game</p>
+            <p>A JavaScript Role-Playing Game</p>
           </div>
         </div>
       </div>
