updated rpg misty grove project description

--- a/assets/projectPages/mistygroveAssets/mistygrove.html
+++ b/assets/projectPages/mistygroveAssets/mistygrove.html
@@ -56,26 +56,33 @@
         <p class="intro-topic_time"> 
             Development - JavaScript | August 2022-December 2022 | Personal Project 
         </p>
+        <br>
         <p class="intro-topic_time"> 
-            ALorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          I developed a small battle RPG game using JavaScript and CSS, and created corresponding pixel art characters and backgrounds.
+          The game is playable in all JavaScript-allowed browsers, and includes a arrowkey-controllable character, cutscenes and NPC interactions,
+          a full battle system, and player's healing/object-aquiring features.
         </p>
 
         <h4>
             Access the game here: 
-            <a href="https://ann-c-tseng.github.io/JS-RPG/index.html" target="_blank"> 
+            <a href="https://ann-c-tseng.github.io/Misty-Grove_JS-RPG/index.html" target="_blank"> 
                 <i><u>Play Misty Grove</u></i> 
             </a>
         </h4>
       </div>
 
       <div class="intro_right">
-        <h4>My Role: Software Developer</h4>
+        <h4>My Role: JavaScript & Game Dev</h4>
         <p>
-            JavaScript development, html and css content and styling, pixel character and envrionment graphic design
+            JavaScript, html, and css development + pixel and envrionment design
         </p>
       </div>
     </section>
     <br><br>
+    
+    <div class="banner">
+      <img src="../../images/MistyGrove.png" alt="Misty Grove">
+    </div>
 
  
     <!-- CASE STUDY END! -->
